# django-nps

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG  CHANGELOG.md  LICENSE  Pipfile  README  README.md  README.rst  pyproject.toml  requirements.txt  settings.py  setup.py  tox.ini  urls.py
.github/workflows/: tox.yml
net_promoter_score/: __init__.py  admin.py  apps.py  forms.py  middleware.py  models.py  settings.py  signals.py  urls.py  utils.py  views.py
net_promoter_score/migrations/: 0001_initial.py  0002_promoterscore_source.py  __init__.py
net_promoter_score/tests/: __init__.py  test_forms.py  test_functions.py  test_middleware.py  test_models.py  test_views.py
requirements/: base.txt  django110.txt  django18.txt  django19.txt
tests/: settings.py  test_forms.py  test_functions.py  test_middleware.py  test_models.py  test_signals.py  test_views.py  urls.py
